# cdp-lite

./: Cargo.toml  LICENSE  README.md
examples/: breakpoints_usage.rs  filter_domains.rs  proxy_usage.rs  runtime_usage.rs  simple.rs
src/: client.rs  error.rs  event_filter.rs  lib.rs  protocol.rs  rest_client.rs
