[package]
name = "cdp-lite"
version = "0.1.1"
edition = "2024"
authors = ["Raul Tovar <raultov@protonmail.com>"]
description = "A lightweight, asynchronous, and low-overhead Rust client for the Chrome DevTools Protocol (CDP)."
readme = "README.md"
repository = "https://github.com/raultov/cdp-lite"
license = "MIT"
keywords = ["cdp", "chrome", "automation", "devtools", "headless"]
categories = ["asynchronous", "development-tools::debugging", "web-programming"]
exclude = [".gitignore", "examples/*"]

[dependencies]
# Core async runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

# WebSocket communication
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HTTP client for fetching the WebSocket URL (if used in your rest_client)
reqwest = { version = "0.13.1", features = ["json"] }

# Error handling
thiserror = "2.0.17"

# Logging
tracing = "0.1.44"

# Dispatcher
oneshot = "0.1.11"

# Logging & Tracing
log = "0.4.29"

[dev-dependencies]
tracing-subscriber = {  version = "0.3.22", features = ["env-filter"] }

